--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,7 +5,7 @@
 
   <!-- Bootstrap stylesheets and script -->
   <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
-  <link th:href="@{/css/techjobs.css}" rel="stylesheet" />
+  <link th:href="@{/css/techjobsauth.css}" rel="stylesheet" />
   <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
 
   <title th:text="'TechJobs' + ${title == null ? '' : ' :: ' + title}">TechJobs</title>
@@ -14,7 +14,7 @@
 <body>
 
 <div th:fragment="page-header" class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
+<div class="container">
     <div class="navbar-header">
       <a th:href="@{/}" class="navbar-brand">TechJobs</a>
     </div>
